--- a/moor.1
+++ b/moor.1
@@ -114,6 +114,9 @@ Status bar style
 \fB\-\-style\fR={\fBnative\fR | \fIstyle\fR}
 Highlighting style from https://xyproto.github.io/splash/docs/longer/all.html
 .TP
+\fB\-\-tab\-size\fR=int
+Number of spaces per tab stop, defaults to 8.
+.TP
 \fB\-\-terminal\-fg\fR
 Use terminal foreground color rather than style foreground color for unstyled text
 .TP
