Note keypress on man page

--- a/moor.1
+++ b/moor.1
@@ -115,7 +115,11 @@ Status bar style
 Highlighting style from https://xyproto.github.io/splash/docs/longer/all.html
 .TP
 \fB\-\-tab\-size\fR=int
-Number of spaces per tab stop, defaults to 8.
+Number of spaces per tab stop, defaults to 8. Or try
+.B CTRL-t
+to toggle when
+.B moor
+is running.
 .TP
 \fB\-\-terminal\-fg\fR
 Use terminal foreground color rather than style foreground color for unstyled text
