--- a/moor.1
+++ b/moor.1
@@ -136,16 +136,19 @@ Wrap long lines, toggle with
 Immediately scroll to line
 .B 1234
 .SH ENVIRONMENT
-Having
-.B PAGER=moor
-in your environment will make lots of different programs use
-.B moor
+.TP
+.B PAGER
+If set to "moor", many programs will use
+.B
+moor
 as their pager.
-.PP
-Additional options are read from the
+.TP
 .B MOOR
-environment variable if set, just as if those same options had been manually added to each
-.B moor
-invocation.
+Additional options are read from this variable if it is set, just as if those same
+options had been manually added to each moor invocation. Try setting it to
+\fB\-\-reformat\fR to have JSON input automatically reformatted!
+.TP
+.B PAGER_LABEL
+Other programs can set this to tell moor what name to show for stdin input.
 .SH BUGS
 Kindly report any bugs here: https://github.com/walles/moor/issues
