Clarify --terminal-fg use with background images
Inspired by:
https://github.com/walles/moor/issues/340#issuecomment-3446453948

--- a/moor.1
+++ b/moor.1
@@ -122,7 +122,8 @@ to toggle when
 is running.
 .TP
 \fB\-\-terminal\-fg\fR
-Use terminal foreground color rather than style foreground color for unstyled text
+Use terminal foreground color rather than style foreground color for unstyled text.
+Try this if your terminal window has a background image rather than a solid color.
 .TP
 \fB\-\-trace\fR
 Print trace logs after exiting, more verbose than
