Add flag for disabling line background highlighting for searches
Relates to:
https://github.com/walles/moor/issues/335#issuecomment-3529033098

--- a/moor.1
+++ b/moor.1
@@ -73,6 +73,10 @@ Hide line numbers on startup, press left arrow key to show
 \fB\-\-no\-reformat\fR
 No effect, exists for backwards compatibility. See --reformat.
 .TP
+.TP
+\fB\-\-no\-search\-line\-highlight\fR
+Do not highlight the background of lines with search hits. The search hits themselves are still highlighted though, even with this option.
+.TP
 \fB\-\-no\-statusbar\fR
 Hide the status bar, toggle with
 .B =
