Update man page for history file location

--- a/moor.1
+++ b/moor.1
@@ -142,7 +142,7 @@ Immediately scroll to line
 .B 1234
 .SH FILES
 .TP
-.B ~/.moor_search_history
+.B $XDG_DATA_HOME/moor/search_history
 Moor will store your search history in this file.
 .SH ENVIRONMENT
 .TP
